force-app/main/default/objects/Internal_Engagement_Team_Member__c/Internal_Engagement_Team_Member__c.object-meta.xml
<CustomObject>
    <label>Internal Engagement Team Member</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Internal Engagement Team Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Internal Engagement Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>