force-app/main/default/objects/Internal_Engagement_Team_Member__c/fields/Internal_Engagement_Team__c.field-meta.xml
<CustomField>
    <fullName>Internal_Engagement_Team__c</fullName>
    <label>Internal Engagement Team</label>
    <referenceTo>Internal_Engagement_Team__c</referenceTo>
    <relationshipLabel>Internal Engagement Team Members</relationshipLabel>
    <relationshipName>Internal_Engagement_Team_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>