force-app/main/default/objects/Internal_Engagement_Team_Member__c/fields/Work_Record_Access__c.field-meta.xml
<CustomField>
    <fullName>Work_Record_Access__c</fullName>
    <defaultValue>&quot;None&quot;</defaultValue>
    <label>Work Record Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Read</fullName>
            </value>
            <value>
                <fullName>Write</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>